force-app/main/default/objects/ProductLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineItem__c</fullName>
        <label>LineItem</label>
        <referenceTo>LineItem__c</referenceTo>
        <relationshipLabel>ProductLineItems</relationshipLabel>
        <relationshipName>ProductLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ProductLineItem</label>
    <nameField>
        <displayFormat>PLI-{00000}</displayFormat>
        <label>ProductLineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProductLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>